--- a/themes/papageek-theme/layout/index.ejs
+++ b/themes/papageek-theme/layout/index.ejs
@@ -1,8 +1,8 @@
 <section>
-    <ol id="posts">
+    <ol id="posts" class="grid-2 has-gutter">
         <% site.posts.each(function(item){ %>
             <%- partial('_partial/article-excerpt', {item: item}) %>
-                <% }); %>
-                    <%- partial('_partial/pagination') %>
+        <% }); %>
+        <%- partial('_partial/pagination') %>
     </ol>
 </section>
