--- a/themes/papageek-theme/source/_sass/components/_footer.scss
+++ b/themes/papageek-theme/source/_sass/components/_footer.scss
@@ -1,18 +1,8 @@
 footer {
-  clip-path: polygon(0 0, 100% 2.5em, 100% 100%, 0 100%);
-  background-color: #eee;
-  height: 9rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  background-color: #1e1e24;
+  color: #fff;
+  padding: 2rem;
   text-align: center;
-  div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 80%;
-  }
   form {
     margin: 0 auto;
     *:focus {
@@ -29,15 +19,5 @@ footer {
         border-bottom: 1px solid orange;
       }
     }
-  }
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  a {
-    color: orange;
-  }
-  p {
-    margin-right: 1rem;
   }
 }
