--- a/themes/papageek-theme/layout/_partial/footer.ejs
+++ b/themes/papageek-theme/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <form method="get" id="search" action="http://duckduckgo.com/">
+    <!-- <form method="get" id="search" action="http://duckduckgo.com/">
         <input type="hidden" name="sites" value="mouret.pro" />
         <input type="hidden" name="kl" value="fr-fr" />
         <input type="hidden" name="kz" value="1" />
@@ -8,9 +8,7 @@
 
         <input type="text" name="q" maxlength="255" placeholder="Rechercher" />
         <input type="submit" value="DuckDuckGo Search" style="display:none" />
-    </form>
-    <div>
-        <p>Th&egrave;me fait main par <a href="https://twitter.com/sebMouret">@sebMouret</a>.</p>
-        <p>Site statique propuls&eacute; par <a href="https://hexo.io/">Hexo</a>.</p>
-    </div>
+    </form> -->
+    <p>Th&egrave;me fait main par <a href="https://twitter.com/sebMouret">@sebMouret</a>.</p>
+    <p>Site statique propuls&eacute; par <a href="https://hexo.io/">Hexo</a>.</p>
 </footer>
