--- a/themes/papageek-theme/layout/_partial/head.ejs
+++ b/themes/papageek-theme/layout/_partial/head.ejs
@@ -5,7 +5,7 @@
     <meta name="description" content="<%- config.description %>">
     <link rel="canonical" href="<%- url %>" />
     <link rel="alternate" hreflang="<%- config.language %>" href="<%- config.url %>" />
-
+    <%- css('css/styles') %>
 
     <title><%- config.title %></title>
     <% if (theme.rss){ %>
@@ -14,7 +14,4 @@
     <% if (theme.favicon){ %>
         <link rel="icon" href="<%- theme.favicon %>">
     <% } %>
-    <style>
-        <%- partial('_partial/styles') %>
-    </style>
 </head>
