--- a/themes/papageek-theme/source/_sass/components/_nav.scss
+++ b/themes/papageek-theme/source/_sass/components/_nav.scss
@@ -1,18 +1,30 @@
 #main-nav {
+  a {
+    text-decoration: none;
+  }
+  img {
+    vertical-align: bottom;
+  }
+  h1 {
+    margin: 0;
+    display: inline;
+  }
   ul {
+    margin: 0;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    background-color: #1e1e24;
+    padding: 0.8rem 0;
     a {
       display: block;
       padding: 0 1em;
       border-radius: 2em;
       line-height: 2;
-      color: white;
-      text-decoration: none;
+      color: #c6c6c6;
     }
     li {
-      border-bottom: solid 1px rgba(255, 165, 0, 0);
+      border-bottom: solid 1px transparent;
       &.active,
       &:hover {
         border-bottom: solid 1px orange;
