--- a/themes/papageek-theme/source/_sass/style.scss
+++ b/themes/papageek-theme/source/_sass/style.scss
@@ -1,11 +1,8 @@
-@import "_vendor/normalize";
-@import "_config/variables";
-@import "_config/breakpoints";
-@import "utilities/helpers";
+@import "knacss";
+@import "components/general";
 @import "components/nav";
 @import "components/footer";
 @import "components/header";
 @import "components/articles";
-@import "components/general";
 @import "components/contact";
 @import "components/code";
