--- a/themes/papageek-theme/layout/_partial/footer.ejs
+++ b/themes/papageek-theme/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="main-footer">
     <!-- <form method="get" id="search" action="http://duckduckgo.com/">
         <input type="hidden" name="sites" value="mouret.pro" />
         <input type="hidden" name="kl" value="fr-fr" />
@@ -10,5 +10,8 @@
         <input type="submit" value="DuckDuckGo Search" style="display:none" />
     </form> -->
     <p>Th&egrave;me fait main par <a href="https://twitter.com/sebMouret">@sebMouret</a>.</p>
-    <p>Site statique propuls&eacute; par <a href="https://hexo.io/">Hexo</a>.</p>
+    <p>PapaGeek 2016-2017.</p>
+    <div class="socials">
+        <a class="icon-rss" href="<%= theme.rss %>">RSS</a>
+    </div>
 </footer>
