--- a/themes/papageek-theme/layout/_partial/navigation.ejs
+++ b/themes/papageek-theme/layout/_partial/navigation.ejs
@@ -1,15 +1,10 @@
 
-<nav id="main-nav">
-
-    <div>
-        <a href="https://github.com/isebmo">
-            <img src="/images/papageek-logo.png" alt="PapaGeek" height="38px" width="38px">
-            <h1>PapaGeek</h1>
+<nav id="main-nav" class="max-width">
+        <a href="<%= config.url %>">
+            <img src="/images<%= theme.logo.url %>" alt="<%= theme.logo.alt %>" height="48px" width="48px">
         </a>
-    </div>
-    
-    <ul class="unstyled">
-        <li class="<% if(path.indexOf('cv') > -1) { %> <%= 'active' %> <% } %>"><a href="<%- config.root + 'cv' %>">Pour les parents</a></li>
-        <li class="<% if(path.indexOf('blog') > -1) { %> <%= 'active' %> <% } %>"><a href="<%- config.root + 'blog' %>">Pour le bébé</a></li>
-    </ul>
+        <ul class="unstyled">
+            <li class="<% if(path.indexOf('cv') > -1) { %> <%= 'active' %> <% } %>"><a href="<%- config.root + 'cv' %>">Pour les parents</a></li>
+            <li class="<% if(path.indexOf('blog') > -1) { %> <%= 'active' %> <% } %>"><a href="<%- config.root + 'blog' %>">Pour le bébé</a></li>
+        </ul>
 </nav>
