--- a/themes/papageek-theme/source/_sass/components/_articles.scss
+++ b/themes/papageek-theme/source/_sass/components/_articles.scss
@@ -4,20 +4,33 @@
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .16), 0 0 0 1px rgba(0, 0, 0, .04);
     transition: box-shadow .3s ease-in-out;
     background-color: #fff;
-    border-radius: 5px;
     outline: 0;
     margin-bottom: 1rem;
 }
 
 #posts {
     list-style: none;
-    padding: 0;
+    padding: 1rem;
 }
 
 .blog-post {
-    text-align: justify;
+    background-color: #fff;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .12);
     img {
         max-width: 100%;
+    }
+    header {
+        padding: 1rem;
+        text-align: center;
+    }
+    article {
+        padding: 1rem;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: justify;
     }
 }
 
