--- a/themes/papageek-theme/source/_sass/components/_general.scss
+++ b/themes/papageek-theme/source/_sass/components/_general.scss
@@ -1,4 +1,5 @@
 body {
+    background-color: #efefef;
     blockquote {
         font-family: Georgia, serif;
         font-size: 18px;
@@ -27,4 +28,10 @@ body {
     blockquote cite:before {
         content: "\2014 \2009";
     }
+}
+
+.max-width {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
 }
