--- a/themes/papageek-theme/layout/_partial/article-full.ejs
+++ b/themes/papageek-theme/layout/_partial/article-full.ejs
@@ -23,8 +23,8 @@
     </article>
     <footer>
         <!-- Tags and Categories links -->
-        <%- partial('article-tags', {item: item}) %>
-        <%- partial('article-categories', {item: item}) %>
+        
+        <%- partial('_partial/article-excerpt-categories', {item: item}) %>
 
     </footer>
 </section>
