--- a/themes/papageek-theme/layout/_partial/footer.ejs
+++ b/themes/papageek-theme/layout/_partial/footer.ejs
@@ -9,9 +9,9 @@
         <input type="text" name="q" maxlength="255" placeholder="Rechercher" />
         <input type="submit" value="DuckDuckGo Search" style="display:none" />
     </form> -->
-    <p>Th&egrave;me fait main par <a href="https://twitter.com/sebMouret">@sebMouret</a>.</p>
-    <p>PapaGeek 2016-2017.</p>
-    <div class="socials">
+    <p>Retrouvez moi sur <span class="icon-twitter"></span> <a href="https://twitter.com/sebMouret">@sebMouret</a>.</p>
+    <p><%-config.title%> <%-config.date%>.</p>
+    <div>
         <a class="icon-rss" href="<%= theme.rss %>">RSS</a>
     </div>
 </footer>
