--- a/themes/papageek-theme/source/_sass/components/_button.scss
+++ b/themes/papageek-theme/source/_sass/components/_button.scss
@@ -1,4 +1,5 @@
-.button {
+.button,
+button {
     display: inline-block;
     padding: 1rem;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .12);
@@ -6,7 +7,9 @@
     text-align: center;
     text-decoration: none;
     color: $color1;
+    border: none;
     &:hover {
         box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .30);
+        cursor: pointer;
     }
 }
