--- a/themes/papageek-theme/layout/_partial/article-excerpt.ejs
+++ b/themes/papageek-theme/layout/_partial/article-excerpt.ejs
@@ -1,6 +1,8 @@
 <li class="articles-list">
     <article >
+    <% if (item.fimg) { %>
         <div class="fimg" style="background-image: url(<%- item.fimg %>); background-size: cover;    background-position: center;"></div>
+    <% } %>
         <section>
                 <h2 class="h4-like">
                 <a href="<%- config.root %><%- item.path %>">
