--- a/themes/tfada-theme/source/_sass/_config/_variables.scss
+++ b/themes/tfada-theme/source/_sass/_config/_variables.scss
@@ -36,7 +36,7 @@ $color1: #1e1e24 !default;
 $color2: #fff !default;
 $color3: #333 !default;
 $color4: #1e1e24 !default;
-$color5: #bfdc7a !default;
+$color5: #FF822F !default;
 // colors used in project
 $color-base: $color1;
 $color-link: $color1;
